Fix spacing issue and issue with shape position

--- a/sass/layout/_events.scss
+++ b/sass/layout/_events.scss
@@ -2,8 +2,12 @@
 
 .events {
   padding-top: 5rem;
-  margin-bottom: 6rem;
+  // margin-bottom: 6rem;
   overflow: hidden;
+
+  @include mq(medium) {
+    margin-bottom: 0;
+  }
 
   @include mq(medium) {
     position: relative;
@@ -17,6 +21,7 @@
       width: 100vw;
       left: 0;
       transform: translateX(-50%);
+
       // width: 120vw;
       // left: -586.4px;
     }
@@ -65,6 +70,10 @@
         top: -35.8px;
       }
     }
+  }
+
+  &__text-content {
+    margin-bottom: 6rem;
   }
 
   &__event-type-button {
